- Se agregaron imágenes faltantes al index-html de poa - Se arreglaron las rutas de algunas imágenes que no aparecían - Se añadieron tildes faltantes

--- a/poa/poa_teoria/index.html
+++ b/poa/poa_teoria/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Programacion Orientada a Aspectos</h1>
+      <h1 class="project-name">Programación Orientada a Aspectos</h1>
       <h2 class="project-tagline"></h2>
         <a class="btn btn-actual">Inicio</a>
 		<a href="Pages/historia.html" class="btn">Historia</a>
@@ -41,7 +41,7 @@
 	funcionalidades estaban mezcladas por todo el código. A esta etapa se le llama la <b>generación del 
 		código "espaghetti"</b>:</p>
 
-<p align="center"><img src="https://raw.githubusercontent.com/anfmorenoso/Archivos/master/Spag.jpg" alt=""></p>
+<p align="center"><img src="Images/espaghetti.png" alt=""></p>
 
 <p align="justify">En la imagen, las formas tienen la función de representar los datos, y los colores 
 	representan la funcionalidad. De ésta manera la imagen ilustra lo que llamamos 
@@ -51,7 +51,7 @@
 	del concepto "<em>divide y vencerás</em>". Los desarrolladores comenzaron a identificar las partes
 	 más manejables del código y las expresaron como funciones definidas dentro del dominio del problema:</p>
 
-<p align="center"><img src="https://raw.githubusercontent.com/anfmorenoso/Archivos/master/Func.jpg" alt=""></p>
+<p align="center"><img src="Images/func.png" alt=""></p>
 
 <p align="justify">Se consiguió encapsular de cierta manera las funcionalidades, y se 
 	permitió incluir nuevas funciones de forma más sencilla. No obstante, todavía existían
@@ -66,7 +66,7 @@
 		 Su descomposición en objetos es mucho más acertada en el entorno real que la descomposición 
 		 funcional.</p>
 
-<p align="center"><img src="https://raw.githubusercontent.com/anfmorenoso/Archivos/master/obj.jpg" alt=""></p>
+<p align="center"><img src="Images/obj.png" alt=""></p>
 
 <p align="justify">Aunque la <em>programación orientada a objetos</em> es un paradigma de 
 	programación que resuelve bastantes problemas de la programación tradicional, como el integrar
@@ -102,7 +102,7 @@ de otros, proporcionando mecanismos que hagan posible abstraerlos y componerlos 
 formar todo el sistema. En definitiva, lo que se persigue es implementar una aplicación
 de forma eficiente, fácil de entender y mantener.</p>
 
-<p align="center"><img src="Images/d_aspects.JPG" alt=""></p>
+<p align="center"><img src="Images/d_aspects.webp" alt=""></p>
 
 <p align="justify">En este esquema se observa que la disociación de los distintos conjuntos
 se realiza tanto en base a la forma (datos) como a las tonalidades (funciones). Además,
@@ -111,11 +111,11 @@ representa utilizando figuras transparentes para indicar este tipo de relación.
 
 <p align="justify">Todos estos conceptos se encuentran diseminados por todo el código, a veces incluso implementados múltiples veces, por cada objeto o clase que necesite de las mismas. Un código normal, implementado con paradigmas actuales puede lucir de la siguiente manera:</p>
 
-<p align="center"><img src="https://raw.githubusercontent.com/anfmorenoso/Archivos/master/Cod.jpg" alt=""></p>
+<p align="center"><img src="Images/trad.png" alt=""></p>
 
 <p align="justify">En una version orientada a aspectos del mismo codigo, tenemos un programa mas compacto y modularizado.</p>
 
-<p align="center"><img src="Images/aspect_org.JPG" alt="">
+<p align="center"><img src="Images/aspect_org.webp" alt="">
 
 <p align="justify">La no separación de los conceptos transversales en la programación ocasiona distintos tipos de problemas como pueden ser:</p>
 
@@ -152,7 +152,7 @@ representa utilizando figuras transparentes para indicar este tipo de relación.
 		</p>
 
     <footer class="site-footer">
-		<span class="site-footer-owner"><a href="https://github.com/ProgramacionOrientadaAspectos/POA_teoria">Programacion Orientada a Aspectos</a> is maintained by <a href="https://github.com/ProgramacionOrientadaAspectos">ProgramacionOrientadaAspectos</a>.</span>
+		<span class="site-footer-owner"><a href="https://github.com/ProgramacionOrientadaAspectos/POA_teoria">Programación Orientada a Aspectos</a> is maintained by <a href="https://github.com/ProgramacionOrientadaAspectos">ProgramacionOrientadaAspectos</a>.</span>
 		<span class="site-footer-credits">This page was created by Jenny Sánchez Cruz, Felipe Moreno, Jeisson Prieto, Diego Rojas, Gustavo Galvis y Dorian Tovar.</span>
 	</footer>
     </section>
