Adicción de bibliografia, ejemplo de Calculadora

--- a/poa/tutoriales/aspectJ/index.html
+++ b/poa/tutoriales/aspectJ/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
 
 
-  <title>AspectJ tutoriall</title>
+  <title>AspectJ tutorial</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -1036,6 +1036,19 @@ https://templatemo.com/tm-529-ramayana
                         <p>Aspecto se encarga de revisar si existe suficiente stock del producto</p>
                         <script src="https://gist.github.com/Nicolnegg/36237a5dd941fbe151206cb3d7aa32a2.js"></script>
                       </div>
+
+                      <button class="accordion"><strong> Calculadora con Logs </strong></button>
+                      <div class="panel">
+                        <h4 id="calculadora_log"> Clase Calculadora </h4>
+                        <p>A continuación se presenta la clase calculadora con los métodos básicos.</p>
+                        <script src="https://gist.github.com/DR200131/cab525aecf5fc1106cfbbc3771204bbf.js"></script>
+                        <h4 id="calculadora_log"> Aspecto LogCal </h4>
+                        <p>Aspecto que realiza los logs respectivos.</p>
+                        <script src="https://gist.github.com/DR200131/07f257575323b4b715762a1150aa188b.js"></script>
+                        <h4 id="calculadora_log"> Clase Main </h4>
+                        <p>Clase Main de la calculadora.</p>
+                        <script src="https://gist.github.com/DR200131/ea73196dfea3d09814487d26f815bc33.js"></script>
+                      </div>
                 </div>
               </div>
             </div>
@@ -1145,12 +1158,6 @@ https://templatemo.com/tm-529-ramayana
                     <li>Andres Yohany Velasquez Martinez</li>
                     <li>Valentina Viafara Esteban</li>
                   </ul>
-                  <ul>
-                    <li>Kevin Leonardo Alvarez Mora</li>
-                    <li>Jose Francisco Lugo Nomesque</li>
-                    <li>Andres Yohany Velasquez Martinez</li>
-                    <li>Valentina Viafara Esteban</li>
-                  </ul>
                   <h4>2023-1</h4>
                   <ul>
                     <li>Angel Guillermo Peñarredonda Silva</li>
@@ -1161,7 +1168,7 @@ https://templatemo.com/tm-529-ramayana
                   <ul>
                     <li>Juan Pablo Garzon Parra</li>
                     <li>Brayan Sebastián Yepes Garcia</li>
-                    <li>Diego Sebastián Rubiano Ballen</li>
+                    <li>Diego Sebastián Rubiano Ballén</li>
                     <li>Joe Zafir Mendez Leon</li>
                   </ul>
                   <ul>
@@ -1202,6 +1209,9 @@ https://templatemo.com/tm-529-ramayana
                       http://e-ghost.deusto.es/docs/2007/cursillos/aop/curso_aop.pdf</li>
                     <li>Lorente Lopez, M., Asteasuain, F., & Contreras, E. B. (2005). Programemos en AspectJ.
                       programemos.</li>
+                    <li>Colyer, A., Clement, A., Harley, G., & Webster, M. (2004). Eclipse AspectJ: Aspect-Oriented Programming with AspectJ and the Eclipse AspectJ Development Tools. Addison Wesley Professional</li>.
+                    <li>Eclipse Foundation. (Año). AspectJ Documentation. Recuperado de https://eclipse.dev/aspectj/sample-code.html#declares-exceptionSpelunking</li>
+                    <li>Laddad, R. (2009). Aspectj in action: enterprise AOP with spring applications. Simon and Schuster.</li>
                   </ul>
                 </div>
               </div>
@@ -1250,6 +1260,7 @@ https://templatemo.com/tm-529-ramayana
                 <li><a href="#callsvsexecution">Calls vs Execution</a></li>
                 <li><a href="#contextpassing">Context Passing</a></li>
                 <li><a href="#aspectbehaviours">Aspect Behaviours</a></li>
+                <li><a href="#calculadora_log">Calculadora con Logs</a></li>
               </ul>
             </li>
             <li><a href="#tutoriales">Tutoriales</a></li>
