--- a/poa/poa_teoria/Pages/evolucion.html
+++ b/poa/poa_teoria/Pages/evolucion.html
@@ -228,7 +228,7 @@ Dentro de ellos podemos encontrar:</p>
 
 <hr>
 
-<p align="justify"><em>Estas definiciones de Target y proxy se entienden mejor en la siguiente imagen, donde claramente se ve que la clase aconsejada o Target es la clase <strong>FooService</strong> y el objeto creado Proxy después de aplicar ese Concejo es <strong>FooServiceProxy</strong></em></p>
+<p align="justify"><em>Estas definiciones de Target y proxy se entienden mejor en la siguiente imagen, donde claramente se ve que la clase aconsejada o Target es la clase <strong>FooService</strong> y el objeto creado Proxy después de aplicar ese Consejo es <strong>FooServiceProxy</strong></em></p>
 
 <p align="center"><img src="https://github.com/ProgramacionOrientadaAspectos/POA_teoria/blob/gh-pages/Images/proxy_target.png?raw=true" alt=""></p>
 
