--- a/poa/poa_teoria/Pages/aplicaciones.html
+++ b/poa/poa_teoria/Pages/aplicaciones.html
@@ -193,7 +193,7 @@
         </p></br>
         <li> <h3><ins>JoinPoints</ins></h3> 
         <p align="justify">
-            No puede aplicarse a clases de tipo final, a metodos estaticos o finales porque no se pueden sobrecargar y resultaria en una runtime excepcion
+            No puede aplicarse a clases de tipo final, a métodos estáticos o finales porque no se pueden sobrecargar y resultaría en una runtime exception
         </p></br>
         <li> <h3><ins>Simplicidad</ins></h3> 
         <p align="justify">
